Fix permahover on mobile

--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,10 @@ button {
     color: var(--fg-color);
     background-color: var(--bg-color-3);
     font-size: 1rem;
-    &:hover {
-        background-color: var(--bg-color-4);
+    @media (hover: hover) {
+        &:hover {
+            background-color: var(--bg-color-4);
+        }
     }
 }
 
